syntax = "proto3";

package envoy.extensions.transport_sockets.tls.cert_mappers.sni.v3;

import "udpa/annotations/status.proto";
import "validate/validate.proto";

option java_package = "io.envoyproxy.envoy.extensions.transport_sockets.tls.cert_mappers.sni.v3";
option java_outer_classname = "ConfigProto";
option java_multiple_files = true;
option go_package = "github.com/envoyproxy/go-control-plane/envoy/extensions/transport_sockets/tls/cert_mappers/sni/v3;sniv3";
option (udpa.annotations.file_status).package_version_status = ACTIVE;

// [#protodoc-title: SNI certificate mapper]
// [#extension: envoy.tls.certificate_mappers.sni]

// Uses the SNI value from the TLS client hello as the secret resource name.
message SNI {
  // The value to use as the secret name when SNI is empty or absent.
  string default_value = 1 [(validate.rules).string = {min_len: 1}];
}
